# CGP_mgr

./: .gitignore  Makefile  Obj Func Tests.ipynb  README.md  Readme.md  data.txt  data_vis.py  gui.py  main.py  net.py  net_1d.py  net_2d.py  parameters.py  pyproject.toml  scratch_probab_func.ipynb  simulation.py
notebooks/: Opracowanie danych PT.ipynb  Opracowanie danych SA.ipynb
src/: README.md  cgp.py  cgp_evolved_net.txt  cgpsa.py  gui.py  input.py  main.py  net_1d.py  parallel_tempering.py  parameters.py  simulation.py
src/Data/: sample_data.py
src/Data Gen/: input_data.txt  sample_data.py
src/Input/: func_names.txt  gate_functions.py  objective_function.py
src/Sample Inputs/: gate_functions.py  objective_function.py
src/data_gather/: control_params.txt  data_gathering_automat.py
src/data_gen/: and_gate.py  even_check_gate.py  evencheck_gate.py  random_gate.py  sample_data.py  sample_random_gate.py
src/experiments/: cgp_pt_comparison.py  cgp_sa_comparison.py  pt_example_experiment.py  pt_gather_example_data.py  pt_optimal_max_number_of_steps.py  pt_optimal_number_of_copies.py  pt_optimal_number_of_copies_extension.py  pt_optimal_temp_ratios.py  pt_switch_step_change.py  sa_annealing_param_change.py  sa_example_experiment.py  sa_geom_best_params.py  sa_geom_linear_log_temperature_scales.py  sa_linear_best_params.py  sa_max_step_change.py
src/gathered_data/: control_params.ipynb
src/net_viz/: vizualize.py
src/user_inputs/: gate_functions.py  input_and_gate.txt  input_data.txt  input_even_check_gate.txt  input_random_gate.txt  objective_function.py  (+1 more)
(+73 files in other folders)
