[tool.poetry]
name = "Cartesian Genetic Programming Experiments"
version = "0.1.0"
description = ""
authors = ["MateuszKaczorek <mateusz.kaczorek@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flakehell = "^0.9.0"
black = "20.8b1"
isort = "^5.9.2"
jupyter = "^1.0.0"
tqdm = "^4.61.2"
pandas = "^1.3.1"
seaborn = "^0.11.1"
numpy = "^1.22.1"
flake8 = "3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakehell]
extended_default_ignore = []
exclude = []
format = "colored"
max_line_length = 88
show_source = true

[tool.flakehell.plugins]
pycodestyle = ["+*", "-W503", "-E203"]
pyflakes = ["+*"]

[tool.isort]
line_length = 88
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
include_trailing_comma = true
multi_line_output = 3

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.local
  | \.cache
  | \.stamps
  | \.venv
)/
'''